--- a/pom.xml
+++ b/pom.xml
@@ -13,28 +13,25 @@
         <version>3.3</version>
       </plugin>
       <plugin>
-	      <artifactId>maven-assembly-plugin</artifactId>
-	      <configuration>
-	        <descriptorRefs>
-	          <descriptorRef>jar-with-dependencies</descriptorRef>
-	        </descriptorRefs>
-	        <finalName>${project.artifactId}-${project.version}</finalName>
-	        <archive>
-	          <manifest>
-	            <mainClass>net.exodiusmc.example.Main</mainClass>
-	          </manifest>
-	        </archive>
-	        <appendAssemblyId>false</appendAssemblyId>
-	      </configuration>
-	      <executions>
-	        <execution>
-	          <phase>package</phase>
-	          <goals>
-	            <goal>single</goal>
-	          </goals>
-	        </execution>
-	      </executions>
-	    </plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>2.4.3</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>net.exodiusmc.example.Main</mainClass>
+                </transformer>
+              </transformers>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
   <dependencies>
